--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,13 @@ body{
   margin: 0px;
   background-color:#444;
   font-size: 18px;
+  background-image: url("https://i.ytimg.com/vi/OxX-M4Ums5g/hqdefault.jpg");
+  /*background-size: cover;*/
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
+.title, .addDancerButton, .lineupButton{
   padding:5px 12px;
   float:right;
 }
@@ -26,12 +28,8 @@ body, a:link, a:visited, a:active{
   position:absolute;
 }
 .popdancer{
-  border:10px solid red;
-  /*border-radius:10px;*/
   position:absolute;
 }
 .bouncydancer{
-  border:10px solid red;
-  /*border-radius:10px;*/
   position:absolute;
 }
